@@ -1,3 +1,9 @@
+[B]1.0.4[/B]
+- [FIXED] Removed executable bit on German strings.po (thanks Ronie)
+- [MODIFIED] TV show view now show unwatched episode count. Season view 0 episode count bug fixed (thanks Neroes, Mozillion) 
+- [NEW] Skin option to hide search (thanks Leefur)
+- [NEW] Programs option added to homescreen (thanks Destaroyah)
+
 [B]1.0.3[/B]
 - [FIXED] Media source dialog (thanks Keli)
 - [MODIFIED] Movie duration added to library lists (thanks solbero)
